# vlabor_ros2

./: .gitignore  AGENTS.md  README.md
_backup/2026-01-24/scripts/: status.sh
_backup/unused_packages/so101_bringup/: CMakeLists.txt
_backup/unused_packages/so101_controller/: package.xml
_backup/unused_packages/so101_controller/config/: so101_vr_controllers.yaml
_backup/unused_packages/so101_controller/launch/: so101_controllers.launch.py
_history/: 2026-01-17_vr-teleop-tip-alignment.md  2026-01-22_vlabor_docker_fluent_integration.md
datasets/: ._README.md  README.md
docker/: .env  Dockerfile.fluent  Dockerfile.local  Dockerfile.robot  Dockerfile.robot-fluent  Dockerfile.vr  README.md  docker-compose.yml  entrypoint-fluent.sh  entrypoint-local.sh  entrypoint-robot-fluent.sh  entrypoint-robot.sh  entrypoint-vr.sh  setup.sh  zenoh-robot.json5
docs/: AgileX_Piper_ROS2インタフェース仕様.md  EtherCAT ROS2 対応状況調査レポート.md  README.md  profiles.md  robot_interface_comparison.md  roles.md  so101_driver_survey.md  so101_interface_spec.md  vr_teleop_design.md  vr_teleop_test_plan.md  vr_teleop_todo.md  vr_teleop_ui_design.md
docs/utm_setup/: VLAbor Mac環境(UTM)セットアップ手順書.md
docs/調整中/: lerobot_configuration_guide.md  lerobot_integration_design.md  mujoco_integration_design.md  multi_robot_architecture.md  policy_runner_node.md  system_architecture.md  system_overview.md  technical_details.md  vr_dual_arm_teleop_design.md
lerobot_recorder/: README.md  package.xml  setup.cfg  setup.py
lerobot_recorder/_backup/2026-01-28/: episode_recorder.launch.py
lerobot_recorder/config/presets/: piper_single_vr.yaml  so101_dual_leader.yaml  so101_dual_vr.yaml  so101_single_vr.yaml
lerobot_recorder/config/robots/: generic.yaml  piper.yaml  so101.yaml
lerobot_recorder/docs/: episode_recorder_design.md
lerobot_recorder/launch/: episode_recorder.launch.py  lerobot_recorder.launch.py
lerobot_recorder/lerobot_recorder/: __init__.py  episode_recorder_node.py  frame_buffer.py  lerobot_writer.py  video_encoder.py
lerobot_runner/: README.md  package.xml  setup.cfg  setup.py
lerobot_runner/config/presets/: so101_dual_act.yaml  so101_dual_smolvla.yaml  so101_single_smolvla.yaml
lerobot_runner/config/robots/: so101.yaml
lerobot_runner/launch/: policy_runner.launch.py
lerobot_runner/lerobot_runner/: __init__.py  policy_runner_node.py
lerobot_runner/lerobot_runner/policy/: __init__.py  act.py  base.py  registry.py  smolvla.py
lerobot_runner/lerobot_runner/utils/: __init__.py  action_buffer.py  conversion.py  filtering.py
lerobot_runner/lerobot_runner/webapi/: __init__.py  server.py
models/: README.md
scripts/: build  build.sh  clean  kill_all  run  setup_samba.sh  start.sh  start_robot_remote.sh  start_vr_remote.sh  start_with_logs.sh  stop  stop.sh  test_zenoh_bridge.sh  test_zenoh_connection.sh  vlabor
so101_bringup/: package.xml
so101_bringup/config/: so101_cameras.yaml  so101_realsense2.yaml  so101_sdr.yaml
so101_bringup/launch/: so101_teleoperate.launch.py
so101_bringup/rviz/: robot_display_with_cameras.rviz
so101_controller/: .flake8  CMakeLists.txt
so101_controller/config/: so101_controllers.yaml
so101_controller/launch/: controller_manager.launch.py
so101_description/: CMakeLists.txt  package.xml
so101_description/assets/step/: Base_SO101.step  Base_motor_holder_SO101.step  Motor_holder_SO101_Base.step  Motor_holder_SO101_Wrist.step  Rotation_Pitch_SO101.step  Seeedstudio_Mounting_Plate_SO101.step  Under_arm_SO101.step  Upper_arm_SO101.step  WaveShare_Mounting_Plate_SO101.step  Wrist_Roll_Pitch_SO101.step
so101_description/assets/step/Follower_Specific/: Moving_Jaw_SO101.step  Wrist_Roll_Follower_SO101.step
so101_description/assets/step/Leader_Specific/: Handle_SO101.step  Trigger_SO101.step  Wrist_Roll_SO101.step
so101_description/config/: initial_positions.yaml  joint_limits.yaml  joint_names_so_arm_urdf.yaml
so101_description/config/calibration/: left_arm.json  right_arm.json
so101_description/launch/: display.launch.py  display_robot.launch.py  rsp.launch.py
so101_description/rviz/: display.rviz  vr_teleop.rviz
so101_description/urdf/: so101_new_calib.ros2_control.xacro  so101_new_calib.urdf  so101_new_calib.urdf.xacro  so101_new_calib_with_transmission.xacro
so101_hardware_interface/: CMakeLists.txt  package.xml
so101_ros2_bridge/: package.xml  setup.cfg  setup.py
so101_ros2_bridge/config/: so101_left_params.yaml  so101_policy_params.yaml
so101_ros2_bridge/launch/: so101_ros2_bridge.launch.py
so101_ros2_bridge/so101_ros2_bridge/: __init__.py  follower_ros2_node.py  policy_runner_ros2_node.py
unity_robot_control/: README.md  package.xml  setup.cfg  setup.py
unity_robot_control/config/: launch_profiles.yaml  vr_dual_arm_config.yaml
unity_robot_control/docs/: launch_profiles.md  urdf_lerobot_angle_offset.md
unity_robot_control/launch/: teleop_profiles.launch.py  vr_dual_arm_teleop.launch.py  vr_dual_arm_teleop_direct.launch.py  vr_dual_arm_teleop_robot_only.launch.py  vr_single_arm_teleop_direct.launch.py
unity_robot_control/unity_robot_control/: __init__.py  ik_solver_node.py  ik_to_joint_trajectory_node.py  joint_state_mirror_node.py  rosbag_to_lerobot.py  so101_control_node.py  unity_tcp_endpoint.py  vr_dual_arm_control_node.py
unity_robot_control/web/: index.html
vlabor_dashboard/: package.xml  setup.cfg  setup.py
vlabor_dashboard/vlabor_dashboard/: __init__.py  dashboard_node.py
vlabor_dashboard/web/: index.html
vlabor_launch/: README.md  package.xml  setup.cfg  setup.py
vlabor_launch/config/: copy_map_dual.yaml  copy_map_single.yaml  overhead_camera_c920.yaml  realsense_d405_vlabor.yaml  roles.yaml  vlabor_profiles.yaml
vlabor_launch/config/profiles/: gazebo_so101.yaml  overhead_camera.yaml  rviz_so101.yaml  so101_dual_teleop.yaml  so101_single_teleop.yaml  so101_vr_dual_teleop.yaml  vr_server_only.yaml
vlabor_launch/launch/: vlabor.launch.py
vlabor_launch/resource/: vlabor_launch
vlabor_launch/vlabor_launch/: __init__.py  device_mapping.py  device_scanner.py
(+54 files in other folders)
