<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlabor_launch</name>
  <version>0.1.0</version>
  <description>Launch entrypoints and profiles for vlabor teleop</description>
  <maintainer email="takatronix@gmail.com">Takashi Otsuka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>unity_robot_control</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>fv_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
